--- a/gameindex.html
+++ b/gameindex.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--This is mostly boring stuff that tells the HTML what other files to look at and how 
+    to be not horrible looking on other screens.-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,7 +11,9 @@
     <title>Text Adventure</title>
 </head>
 <body>
+    <!--The div class "container" is where all our content will go..-->
     <div class="container">
+        <!--The following IDs help the JavaScript know what to apply specific stuff to.-->
         <div id="text">Text</div>
         <div id="option-buttons" class="optionclass">
             <button class="btn">Option 1</button>
